# DoctorPy

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  PREFECT_README.md  README.md  SERVICES_README.md  TODO_IMPROVEMENTS.md  docker-compose.yml  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_auth.py  run_quest.py  run_rag.py  start_prefect.sh  start_services.py  test_integration.py
config/: development.yaml  production.yaml
data/processed_test/: processing_report.json
notebooks/: avancements.ipynb
notebooks/legacy/: avancements.ipynb  base_project.ipynb
notebooks/tutorials/: architecture_overview.ipynb
scripts/data_processing/: create_embeddings.py  index_documents.py  process_documents.py  scrape_docs.py
scripts/demo/: demo_complete.py  demo_services.py
scripts/dev/: run_analytics.py  run_auth.py  run_notification.py  run_quest.py  run_rag.py  run_services.py  start_services.py
scripts/setup/: complete_setup.sh  download_models.sh  init_vector_store.py  install_ollama.sh  setup_database.py  setup_database_simple.py
scripts/test/: test_integration_auto.py  test_simple.py
scripts/workflows/: __init__.py  analytics.py  data_pipeline.py  deploy_workflows.py  deployment.py  maintenance.py
services/: __init__.py
services/analytics/: Dockerfile  __init__.py  app_simple.py
services/auth/: Dockerfile  __init__.py  app.py  app_simple.py  auth.py  database.py  models.py  routes.py
services/notification/: Dockerfile  __init__.py  app_simple.py
services/quest/: Dockerfile  __init__.py  app.py  app_simple.py  models.py  quest_manager.py  routes.py
tests/: conftest.py
ui/: streamlit_app.py
(+2429 files in other folders)
